<resources>
    <string name="app_name">IntelliQ</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="loading">Loading...</string>
    <string name="queue">Queue</string>

    <string name="no_code_reader">No QR code reader found</string>

    <string name="companies">Companies</string>
    <string name="companies_desc">Select the queue that you want to join from the companies near by or scan a code below.</string>
    <string name="companies_scan">Scan QR Code</string>

    <string name="people_in_queue">People in queue</string>
    <string name="people_in_queue_desc">These people are already in line and will get served before you.</string>

    <string name="ticket_id">Your ticket</string>
    <string name="ticket_id_desc">This is your ticket number, we\'ll let you know when it\'s time for you to show up.</string>

    <string name="time_left">Time left</string>
    <string name="time_left_desc">This is an estimation of how long you have to wait. Make sure that you are back on time.</string>

    <string name="cancel">Cancel ticket</string>
    <string name="cancel_desc">You can give up your place in the queue by clicking the button below.</string>
    <string name="cancel_button">Leave Queue</string>

    <string name="notification_title_default">[NUMBER] people before you</string>
    <string name="notification_content_default">You still have a few minutes before you should get back to [COMPANYNAME]</string>

    <string name="notification_title_get_back">Your turn at [COMPANYNAME]</string>
    <string name="notification_content_get_back">#[NUMBER] will be called up soon, make sure to be there on time.</string>

    <string name="click_to_dismiss">tap to dismiss ticket</string>

</resources>
