<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/ticket_id"
                            style="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <RelativeLayout
                            android:layout_margin="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:src="@drawable/ticket_back"
                                android:layout_centerVertical="true"
                                android:layout_width="match_parent"
                                android:layout_height="60dp" />

                            <TextView
                                android:id="@+id/ticket_number"
                                android:text="127"
                                android:textColor="@color/primary"
                                android:layout_margin="10dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                style="@style/Base.TextAppearance.AppCompat.Display1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </RelativeLayout>

                        <TextView
                            android:text="@string/ticket_id_desc"
                            style="@style/Base.TextAppearance.AppCompat.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/time_left"
                            style="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <RelativeLayout
                            android:layout_margin="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/time_left"
                                android:text="15 min"
                                android:textColor="@color/primary"
                                android:layout_margin="10dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                style="@style/Base.TextAppearance.AppCompat.Display1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </RelativeLayout>

                        <TextView
                            android:text="@string/time_left_desc"
                            style="@style/Base.TextAppearance.AppCompat.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/people_in_queue"
                            style="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <RelativeLayout
                            android:layout_margin="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/people_in_queue"
                                android:text="3"
                                android:textColor="@color/primary"
                                android:layout_margin="10dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                style="@style/Base.TextAppearance.AppCompat.Display1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </RelativeLayout>

                        <TextView
                            android:text="@string/people_in_queue_desc"
                            style="@style/Base.TextAppearance.AppCompat.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/cancel"
                            style="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:text="@string/cancel_desc"
                            android:layout_marginTop="5px"
                            android:layout_marginBottom="5px"
                            style="@style/Base.TextAppearance.AppCompat.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/button_leave_queue"
                            android:text="@string/cancel_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>